--- a/modulos/modulo_diccString.tex
+++ b/modulos/modulo_diccString.tex
@@ -143,10 +143,8 @@ Usaremos $copy(s)$ para denotar el costo de copiar el elemento $s \in \alpha$. L
 	\begin{enumerate}
 
 		\item La raíz del trie es un nodo válido no nulo que no guarda valor
-		%TODO tal vez si queremos que se haga nulo o que guarde valor
 
 		\item Los punteros son únicos (se referencian desde un único punto del trie)
-		%TODO agregar a Rep
 
 	\end{enumerate}
 
@@ -297,9 +295,7 @@ Usaremos $copy(s)$ para denotar el costo de copiar el elemento $s \in \alpha$. L
 			\lIf(\OdeBloque{1}){entrada == NULL} {break}
 			entrada $\leftarrow$ (*entrada).hijos[ord(c[i])]\OdeLinea{1}
 		}
-
-		% TODO podemos usar logica de cortocircuito? usamos simbolos de C para logica?
-		res $\leftarrow$ not entrada == NULL \&\& (*entrada).contieneValor\OdeLinea{1}
+		res $\leftarrow$ not entrada == NULL \textbf{and} (*entrada).contieneValor\OdeLinea{1}
 	\end{algorithm}
 
 	\complejidad: $O(|c_{max}|)$
@@ -333,7 +329,7 @@ Usaremos $copy(s)$ para denotar el costo de copiar el elemento $s \in \alpha$. L
 			entrada $\leftarrow$ (*entrada).hijos[ord(c[i])]\OdeLinea{1}
 		}
 
-		% TODO hace romper los nodos que no sirven?
+		% TODO hace falta romper los nodos que no sirven?
 		(*entrada).contieneValor $\leftarrow$ false\OdeLinea{1}
 		Eliminar(dic.claves, c)\OdeLinea{|c_{max}| * \#c}
 	\end{algorithm}
